--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
         <h1 class="name">Ahmed Helal</h1>
         <p class="title">Frontend Developer at smart vision</p>
         <div class="social">
-          <a href="" target="_blank"><i class="bi bi-facebook"></i></a>
-          <a href="" target="_blank"><i class="bi bi-linkedin"></i></a>
-          <a href="" target="_blank"><i class="bi bi-github"></i></a>
-          <a href="" target="_blank"><i class="bi bi-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/ahmed-helal-2165b8156/" target="_blank"><i
+              class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/HELAL15" target="_blank"><i class="bi bi-github"></i></a>
+          <a href="mailto:1ahmedhelal1@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
+          <a href="tel:+201222810589" target="_blank"><i class="bi bi-phone"></i></a>
+          <a href="https://twitter.com/_A_helal_" target="_blank"><i class="bi bi-twitter"></i></a>
+          <a href="https://www.facebook.com/Ahmed.helal.23/" target="_blank"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/_helal_15_/" target="_blank"><i class="bi bi-instagram"></i></a>
         </div>
         <div class="nav">
           <a href="#my_experties">about me</a>
@@ -51,38 +55,40 @@
       </div>
       <div class="row gy-4 mt-4">
         <div class="col-md-4">
-          <div class="card">
+          <div class="card wow bounceInLeft">
             <div class="card-header">
               <h3>design</h3>
             </div>
             <div class="card-img">
-              <img src="../images/icons/html.svg" alt="html">
-              <img src="../images/icons/css.svg" alt="css">
-              <img src="../images/icons/scss.svg" alt="scss">
-              <img src="../images/icons/bootstrap.svg" alt="bootstrap">
-              <img src="../images/icons/tailwind.svg" alt="tailwind">
+              <img src="images/icons/html.svg" alt="html">
+              <img src="images/icons/css.svg" alt="css">
+              <img src="images/icons/scss.svg" alt="scss">
+              <img src="images/icons/bootstrap.svg" alt="bootstrap">
+              <img src="images/icons/tailwind.svg" alt="tailwind">
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
+          <div class="card wow bounceInUp">
             <div class="card-header">
               <h3>code</h3>
             </div>
             <div class="card-img">
-              <img src="../images/icons/javascript.svg" alt="javascript">
-              <img src="../images/icons/react.svg" alt="react">
+              <img src="images/icons/javascript.svg" alt="javascript">
+              <img src="images/icons/typescript.svg" alt="typescript">
+              <img src="images/icons/jquery.svg" alt="jquery">
+              <img src="images/icons/react.svg" alt="react">
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
+          <div class="card wow bounceInRight">
             <div class="card-header">
               <h3>tools</h3>
             </div>
             <div class="card-img">
-              <img src="../images/icons/git.svg" alt="git">
-              <img src="../images/icons/github.svg" alt="github">
+              <img src="images/icons/git.svg" alt="git">
+              <img src="images/icons/github.svg" alt="github">
             </div>
           </div>
         </div>
