--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="row gy-4 mt-4">
         <div class="col-md-4">
-          <div class="card wow bounceInLeft">
+          <div class="card wow fadeInUp">
             <div class="card-header">
               <h3>design</h3>
             </div>
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card wow bounceInUp">
+          <div class="card wow fadeInUp">
             <div class="card-header">
               <h3>code</h3>
             </div>
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card wow bounceInRight">
+          <div class="card wow fadeInUp">
             <div class="card-header">
               <h3>tools</h3>
             </div>
@@ -121,7 +121,7 @@
   <section class="contact_me">
     <div class="container">
       <div class="row gy-4 align-items-center flex-wrap-reverse">
-        <div class="col-md-6 wow bounceInLeft">
+        <div class="col-md-6 wow fadeInUp">
           <form action="" class="form" id="form">
             <div class="row gy-3">
               <div class="col-md-6">
@@ -162,7 +162,7 @@
             </div>
           </form>
         </div>
-        <div class="col-md-6 wow bounceInRight">
+        <div class="col-md-6 wow fadeInUp">
           <div class="sec-title">
             <h2>contact me</h2>
             <p>Let's discuss your next project! I'm here to transform your ideas into a stunning digital reality.
